# agentserve

./: .gitignore  README.md  pyproject.toml
agentserve/: __init__.py
agentserve/engine/: cache.py  classifier_weights.json  difficulty.py  engine.py  learned_difficulty.py  length_predictor.py  policies.py  prefix_cache.py  request.py  sampling.py  scheduler.py  sensitivity_sweep.json  trajectory.py
agentserve/model/: config.py  llama.py  loader.py
agentserve/server/: app.py
notes/: daily.md  experiments.md  findings.md  lmcache_training_pairs.jsonl  results_20260531_151633.json  results_20260531_154047.json  results_20260601_173314.json  results_20260601_175726.json  results_20260603_140402.json  results_20260603_145048.json  results_20260603_151252.json  results_20260603_151630.json  results_with_vllm.json  runpod_setup.md  understanding.md  video_script.md  weaknesses.md
notes/plots/: trajectory_results.json
scripts/: bench_ablation.py  bench_agent_trace.py  bench_throughput.py  bench_trajectories.py  compare_vllm.py  convert_lmcache_traces.py  demo.py  generate_synthetic.py  plot_all.py  plot_results.py  record_trace.py  run_modal.py  train_classifier.py
tests/: test_cache.py  test_difficulty.py  test_engine_mock.py  test_prefix_cache.py  test_scheduler.py
traces/: synthetic_50.jsonl
